samples/_failures_safe/1761222269_c9ad63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ca2df88.c: In function ‘main’:
./samples/SAFE/__tmp_7ca2df88.c:147:12: error: missing terminating " character
  147 |     printf("\nMost common log level: %s
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7ca2df88.c:147:5: error: expected expression at end of input
  147 |     printf("\nMost common log level: %s
      |     ^~~~~~
./samples/SAFE/__tmp_7ca2df88.c:147:5: error: expected declaration or statement at end of input
